[gd_scene load_steps=3 format=3 uid="uid://0ooj2pb2l5tl"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_6m6x5"]
[ext_resource type="FontFile" uid="uid://rd6wnk4gojee" path="res://Game_Sean_Denny.ttf" id="2_bnfyy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6m6x5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -344.0
offset_right = 604.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 65.0
offset_top = 613.0
offset_right = 1151.0
offset_bottom = 617.0
color = Color(1, 1, 1, 0.858824)

[node name="ColorRect2" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 65.0
offset_top = 84.0
offset_right = 1151.0
offset_bottom = 88.0
color = Color(1, 1, 1, 0.858824)
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 6.0
offset_right = 113.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play_One" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play 1P"

[node name="Play_Two" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play 2P"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -114.0
offset_right = 175.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bnfyy")
theme_override_font_sizes/font_size = 150
text = "_Pong_"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play_One" to="." method="_on_play_one_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play_Two" to="." method="_on_play_two_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
